# python

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/anima/: __init__.py  _client.py  _exceptions.py  _http.py  _logger.py  _middleware.py  _pagination.py  _types.py  _voice_connection.py  _webhooks.py
src/anima/resources/: __init__.py  a2a.py  addresses.py  agents.py  anomaly.py  audit.py  calls.py  cards.py  compliance.py  domains.py  emails.py  events.py  identity.py  messages.py  organizations.py  phones.py  pods.py  registry.py  security.py  vault.py  voices.py  wallet.py  webhooks.py
tests/: conftest.py  test_agents.py  test_calls.py  test_cards.py  test_client.py  test_emails.py  test_env_and_logging.py  test_events_and_middleware.py  test_exceptions.py  test_pagination.py  test_raw_response.py  test_vault.py  test_voices.py  test_webhooks.py
