[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima-labs"
version = "0.1.0"
description = "Anima SDK for Python — unified agent identity infrastructure (email, phone, cards, vault)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Anima Labs", email = "support@useanima.sh" }]
keywords = ["ai", "agent", "email", "phone", "cards", "vault", "identity", "mcp", "llm", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
events = [
    "websockets>=12.0",
    "websocket-client>=1.7",
]

[project.urls]
Homepage = "https://useanima.sh"
Documentation = "https://docs.useanima.sh"
Repository = "https://github.com/anima-labs-ai/anima-python"
Issues = "https://github.com/anima-labs-ai/anima-python/issues"
Changelog = "https://github.com/anima-labs-ai/anima-python/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/anima"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
